clusters/main-configs/longhorn/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lh-httproute
  namespace: longhorn-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  hostnames:
  - "longhorn.local.m1xxos.tech"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
